# JobSherpa

./: .gitignore  DEVELOPMENT.md  README.md  STRUCTURE.md  pyproject.toml
.specstory/history/: 2025-08-13_16-52Z-defining-requirements-for-ai-hpc-agent.md
benchpro_examples/mcawood_gromacs_PEP_2023-10-18T11-29_001N_56R_01T_00G/: bench_report.txt  job.qsub
benchpro_examples/mcawood_ljmelt_2023-12-15T11-45_001N_56R_01T_00G/: bench_report.txt  job.qsub
benchpro_examples/mcawood_namd_apoa1_2023-10-18T11-29_001N_56R_01T_00G/: bench_report.txt  job.qsub
benchpro_examples/mcawood_new_conus12km_2023-10-18T11-29_001N_56R_01T_00G/: bench_report.txt  job.qsub
blah/2025-08-15-16-23-wrf_run-41478b/: job_script.sh
dev/: ARCHITECTURE.md  DESIGN.md  REQUIREMENTS.md  STYLE.md
jobsherpa/: config.py
jobsherpa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
jobsherpa/agent/: actions.py  agent.py  config_manager.py  conversation_manager.py  (+8 more)
tests/: test_actions.py  test_actions_wrf_integration.py  test_agent.py  test_app_registry.py  test_cli.py  test_config_manager.py  test_conversation_manager.py  test_dataset_index.py  test_intent_classifier.py  test_job_history.py  test_job_history_extras.py  test_job_state_tracker.py  test_kb_loader.py  test_kb_models.py  test_module_client.py  test_recipe_index.py  test_recipe_index_filter.py  test_scheduler.py  test_site_loader.py  test_system_index.py  test_tool_executor.py  test_workspace_expansion.py  test_workspace_manager.py  test_wrf_render.py
tools/: random_number.sh.j2  submit_job.sh  wrf.sh.j2
(+27 files in other folders)
